- catalog snippet bug fixes - catch error when image loading fails (placehodler covers not yet implemented) - main carousel now uses <img>

--- a/css/carousel.less
+++ b/css/carousel.less
@@ -28,9 +28,14 @@
 				background-repeat: no-repeat;
 				background-position: center center;
 				background-size: cover;
+				background-color: green;
 				margin: 0 5px;
 				transition: all 0.2s;
 				-webkit-transition: all 0.2s;
+			}
+
+			.pic.no-image {
+				background-color: red;
 			}
 		}
 
