--- a/css/catalog.less
+++ b/css/catalog.less
@@ -25,6 +25,11 @@
 				width: @catalogItemWidth;
 				height: @catalogItemHeight;
 				border: none;
+				background: green;
+			}
+
+			img.no-image {
+				background: red;
 			}
 
 			span {
